설정 만지고, 건물 만듦 이제 여기 안올릴거임

--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,9 +7,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.2138236A" = "cat"
+	"last_search.2138236A" = "ground"
 	"OpenInspectorPreview.2138236A" = "0"
-	"currentGroup.2138236A" = "all"
+	"currentGroup.2138236A" = "asset"
 }
 providers = {
 	adb = {
