팝업 버그 수정, 아이템 구매 팝업, 그 외 UI씬 에서의 작업

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,10 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
+Assets/Scripts/PlayerTransInit.cs
+Assets/Scripts/PlayerTransInit.cs.meta
+UserSettings/Layouts/default-2021.dwlt
+Assets/Suriyun/Animations/Pspsps Animations/cat.controller.meta
+Assets/Suriyun/Animations/Pspsps Animations/cat.controller
+Assets/Scripts/PlayerTransInit.cs.meta
+Assets/Scripts/PlayerTransInit.cs
