강의 수강할때 탭에서 건물이름이랑 학과명 보여주게 수정, 포탈 class 코드 정리

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ Assets/Suriyun/Animations/Pspsps Animations/cat.controller.meta
 Assets/Suriyun/Animations/Pspsps Animations/cat.controller
 Assets/Scripts/PlayerTransInit.cs.meta
 Assets/Scripts/PlayerTransInit.cs
+UserSettings/Layouts/default-2021.dwlt
